fix: centang visible di mobile

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1035,4 +1035,8 @@ body {
         cursor: pointer;
         margin-right: 10px;
     }
+
+    .message {
+        max-width: 100%;
+    }
 }
